--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="wfZydaMj4Kbr_OrpLwv0BIRA1K9HwwFN5Plul6ZCz5k" />
+    <meta name="naver-site-verification" content="f7f0f4f86f8aef2af056f07880d33f72ad7b71a4" />
     <title>자동차 보험 관련 키워드 및 상세 정보</title>
     <style>
         body { font-family: 'Malgun Gothic', '맑은 고딕', sans-serif; line-height: 1.6; padding: 20px; background-color: #f4f4f9; }
@@ -1378,4 +1380,5 @@
 </div>
 
 </body>
+
 </html>
